fix chat heading not being aligned and using wrong styles

--- a/src/components/chat/chat.scss
+++ b/src/components/chat/chat.scss
@@ -138,11 +138,15 @@
     }
 
     .chat-view-heading {
+      box-sizing: border-box;
       position: static;
       z-index: 9999;
       top: 0;
       margin-top: 0;
       border-radius: 0;
+      background: linear-gradient(to top, var(--panel), var(--panel)),
+                  linear-gradient(to top, var(--bg), var(--bg));
+      height: 50px;
     }
 
     .scrollable-message-list {
